added us only disclaimer

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,6 +12,8 @@
             <%= render 'static_pages/waitlist_form' %>
         <% end %>
 
+        <h1 class="disclaimer--us-only disclaimer--us-only-home">*Currently available in the US only</h1>
+
         <div class='footer-links'>
             <a href="/assets/luckee_privacy_policy.pdf"  target="_blank"  class='privacy-link'>Privacy Policy</a>
             <a href="/assets/luckee_TOS.pdf"  target="_blank"  class='terms-link'>Terms of Service</a>
