--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -176,7 +176,16 @@ p {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+.disclaimer--us-only {
+    font-size: $xs;
+    text-transform: uppercase;
+    color: $blue-steel;
+    margin-bottom: 0;
 
+    &.disclaimer--us-only-home {
+        color: $dark-gray;
+    }
+}
 .nav-dropdown__item {
 
   a {
