copy edit and email paypal fix

--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -192,6 +192,12 @@ body.waitlist-page {
     }
 }
 
+.cash-out__title {
+    color: $black;
+    font-size: $xl;
+    margin-top: 20px;
+}
+
 .new_waitlist_user {
     text-align: center;
 
