--- a/app/views/static_pages/new_cash_out.html.erb
+++ b/app/views/static_pages/new_cash_out.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, 'Thanks!') %>
+<% content_for :body_class, "no-bg" %>
+
 <div class='my-balance'>
-	<h2 style='color:black'>Thanks! We will be in touch shortly to process your request!</h2>
+
+	<h2 class="cash-out__title">Thanks for cashing out:  we are reviewing your request and it will be processed within 24 hours</h2>
+
 </div>
 
