added minimal styling to cashout page

--- a/app/views/static_pages/new_cash_out.html.erb
+++ b/app/views/static_pages/new_cash_out.html.erb
@@ -1,9 +1,10 @@
 <% provide(:title, 'Thanks!') %>
 <% content_for :body_class, "no-bg" %>
 
-<div class='my-balance'>
-
-	<h2 class="cash-out__title">Thanks for cashing out:  we are reviewing your request and it will be processed within 24 hours</h2>
-
-</div>
+<div class='vertical-align'>
+    <div class="vertical-align__wrap">
+        <h2 class="cash-out__title">Thanks for cashing out! We are reviewing your request and it will be processed within 24 hours.</h2>
+        <a class="return-home--link" href="/">Return to games</a>
+    </div><!-- /.vertical-align__wrap -->
+</div><!-- /.vertical-align -->
 
