--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -1,3 +1,18 @@
+.vertical-align {
+    position: relative;
+    height: calc(100vh - 110px);
+}
+
+.vertical-align__wrap {
+    @include vertical-align;
+    padding: 0 7.5%;
+    text-align: center;
+}
+
+.return-home--link {
+    text-align: center;
+}
+
 .intermediate .mobile-container {
     background-image: none;
 }
@@ -195,7 +210,7 @@ body.waitlist-page {
 .cash-out__title {
     color: $black;
     font-size: $xl;
-    margin-top: 20px;
+    margin-top: 0;
 }
 
 .new_waitlist_user {
