added styles for closed_beta page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,7 @@
 @import "surveys";
 @import "forms";
 @import "social_btn";
+@import "jackhammer";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
