--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -11,6 +11,7 @@
 @import "buttons";
 @import "profiles";
 @import "forms";
+@import "jackhammer";
 
 @mixin box_sizing {
     -moz-box-sizing: border-box;
