--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,16 @@
     <meta property="og:description" content="Play free games. Earn Real Cash" />
     <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
 
+
+
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
+
+    <!-- Greensock for jackhammer -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"/></script>
+
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
 
