--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -9,6 +9,13 @@ body {
     position: relative;
     z-index: 1;
 
+    &.waitlist-page--construction {
+        .mobile-container {
+            position: relative;
+            height: 100vh;
+        }
+    }
+
     &.confirmation-page,
     &.mobile-header--hide,
     &.mobile-home,
