--- a/app/views/static_pages/closed_beta.html.erb
+++ b/app/views/static_pages/closed_beta.html.erb
@@ -1,78 +1,16 @@
-<% content_for :body_class, "waitlist-page no-bg" %>
+<% content_for :body_class, "waitlist-page no-bg waitlist-page--construction" %>
 
-<div class="gradient-container">
-    <div class="brand-header">
+<div class="brand-header">
         <div class="logo-wrapper">
-            <%= link_to root_path do %><img src="/assets/white_luckee.png" class="top-title"></a> <% end %>
+                <%= link_to root_path do %><img src="/assets/white_luckee.png" class="top-title"></a> <% end %>
         </div>
         <div class="welcome-box-m">Play free games. Earn real cash.</div>
-          <%# render 'users/form_mobile'%>
-    </div><!-- /.sign-up -->
+            <%# render 'users/form_mobile'%>
+</div><!-- /.sign-up -->
 
-    <div class="form-wrap">
-        Closed beta. You didn't make the cut. Sorry Bro.
-    </div>
-</div><!-- /.gradient -->
+<div class="jackhammer-wrap">
+<%= render 'static_pages/jackhammer' %>
 
-<script type="text/javascript">
-var colors = new Array(
-  // [62,35,255],
-  // [60,255,60],
-  [192,123,233],
-  [45,175,230],
-  [246,71,71],
-  [192,123,233]);
-
-var step = 0;
-//color table indices for:
-// current color left
-// next color left
-// current color right
-// next color right
-var colorIndices = [0,1,2,3];
-
-//transition speed
-var gradientSpeed = 0.001;
-
-function updateGradient()
-{
-
-  if ( $===undefined ) return;
-
-var c0_0 = colors[colorIndices[0]];
-var c0_1 = colors[colorIndices[1]];
-var c1_0 = colors[colorIndices[2]];
-var c1_1 = colors[colorIndices[3]];
-
-var istep = 1 - step;
-var r1 = Math.round(istep * c0_0[0] + step * c0_1[0]);
-var g1 = Math.round(istep * c0_0[1] + step * c0_1[1]);
-var b1 = Math.round(istep * c0_0[2] + step * c0_1[2]);
-var color1 = "rgb("+r1+","+g1+","+b1+")";
-
-var r2 = Math.round(istep * c1_0[0] + step * c1_1[0]);
-var g2 = Math.round(istep * c1_0[1] + step * c1_1[1]);
-var b2 = Math.round(istep * c1_0[2] + step * c1_1[2]);
-var color2 = "rgb("+r2+","+g2+","+b2+")";
-
- $('.gradient-container').css({
-   background: "-webkit-gradient(linear, left top, right top, from("+color1+"), to("+color2+"))"}).css({
-    background: "-moz-linear-gradient(left, "+color1+" 0%, "+color2+" 100%)"});
-
-  step += gradientSpeed;
-  if ( step >= 1 )
-  {
-    step %= 1;
-    colorIndices[0] = colorIndices[1];
-    colorIndices[2] = colorIndices[3];
-
-    //pick two new target color indices
-    //do not pick the same as the current one
-    colorIndices[1] = ( colorIndices[1] + Math.floor( 1 + Math.random() * (colors.length - 1))) % colors.length;
-    colorIndices[3] = ( colorIndices[3] + Math.floor( 1 + Math.random() * (colors.length - 1))) % colors.length;
-
-  }
-}
-
-setInterval(updateGradient,10);
-</script>
+<div id="jackhammer_title">Thanks for participating during Luckee's beta trial. Due to overwhelming demand, we have exceeded capacity and are now in closed beta. Look out for an email when we re-open the beta!</div>
+<h1 class="jackhammer__disclaimer">*any credits earned will be valid once beta is reopened;  any pending cash outs will be paid on schedule</h1>
+</div><!-- /.jackhammer-wrap -->
