--- a/app/assets/stylesheets/jackhammer.css.scss
+++ b/app/assets/stylesheets/jackhammer.css.scss
@@ -168,7 +168,7 @@ body{
     padding: 0 7.5%;
     text-align: center;
 
-    @media screen and (min-width: $iphone5) {
+    @media screen and (min-width: $ipad) {
         font-size: $xl;
     }
 }
