fixed app wrapper height declaration for desktop -  vertically aligning jackhammer

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -10,6 +10,7 @@ body {
     z-index: 1;
 
     &.waitlist-page--construction {
+        .desktop-wrapper,
         .mobile-container {
             position: relative;
             height: 100vh;
