--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -45,6 +45,10 @@ $dark-gray: #26272b;
 $white: #fff;
 $off-white: #fbf8f4;
 
+// Special Palette
+$kd-green: #d4e7bf;
+$kd-green-dark: #638b18;
+
 //icons
 $icon-orange: #f6c273;
 $icon-purple: #9a95e5;
