--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -594,6 +594,9 @@ textarea {
     margin-bottom: 0;
 
     &.disclaimer--us-only-home {
+        .kd-campaign & {
+            color: $kd-green-dark;
+        }
         color: $teal;
     }
 }
@@ -630,6 +633,19 @@ textarea {
         background-image: url('/assets/star_home_background.jpg');
         background-size: 100%;
         background-color: #bdb4d4;
+    }
+
+    &.kd-campaign {
+        .mobile-container {
+            background-image: none;
+            background-color: $kd-green;
+        }
+        .sign-up {
+            .welcome-box-m {
+                padding: 0 40px;
+                color: $kd-green-dark;
+            }
+        }
     }
 }
 .home-bottom{
@@ -1352,7 +1368,7 @@ p {
 @media (max-width: 768px) {
     .overlay-screen--rotate {
         .mobile--overlay {
-            background-image: url(/assets/rotate_screen_2.jpg)
+            background-color: $lavender !important;
         }
         .overlay__back-to-dash {
             display: inline-block;
@@ -1391,18 +1407,30 @@ p {
             width: 100%;
             height: 100vh;
             position: absolute;
-            background-color: rgba(117,117,117,0.5);
             background-position: center;
             background-size: cover;
             z-index: 100;
             text-align: center;
 
         }
+        &.kd-campaign {
+            .overlay__content {
+                color: $kd-green-dark;
+            }
+            .overlay__title {
+                color: $kd-green-dark;
+            }
+            .overlay__down-arrow {
+                color: $kd-green-dark;
+            }
+            .overlay__opt-out {
+                color: $white;
+            }
+        }
         .overlay__content {
             display: block;
             @include vertical-align();
             padding: 0 5%;
-            // padding: 20% 10px 25%;
             font-size: 16px;
             margin-top: -40px;
             &.hide {
@@ -1450,6 +1478,12 @@ p {
 }
 
 .add-to-home {
+    &.kd-campaign {
+        .mobile--overlay {
+            background-image: none;
+            background-color: $kd-green;
+        }
+    }
     .mobile--overlay {
         background-image: url(/assets/blur.jpg);
     }
