--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,15 +60,15 @@
     <section class="navigation">
       <div class="nav-left">
         <%= link_to root_path do %><img class="nav-logo" src="/assets/small_luckee_font.png"><% end %>
+        <p class="nav-dropdown__user-credits" data-toggle="tooltip" data-placement="bottom" title="Credits Earned"><%= current_user.credits ||= 0 %></p>
       </div>
       <% if current_user %>
         <div class="nav-right">
           <%# link_to 'Games', games_path %>
           <div class="nav-dropdown">
-            <p class="nav-dropdown__user-credits" data-toggle="tooltip" data-placement="bottom" title="Credits Earned"><%= current_user.credits ||= 0 %></p>
-            <a href="/surveys" class="js-survery-link"><span style="position:relative;">Surveys <i class="fa fa-exclamation js-survey-notification notification"></i></span></a>
-            <%= link_to redeem_path do %> Redeem <% end %>
-            <%= link_to leaderboards_path do %> Leaders <% end %>
+            <a href="/surveys" class="js-survery-link"><span style="position:relative;"><img class="nav-dropdown__icon nav-dropdown__icon--survey" src="/assets/navbar_1.png">Surveys <i class="fa fa-exclamation js-survey-notification notification"></i></span></a>
+            <%= link_to redeem_path do %><img class="nav-dropdown__icon nav-dropdown__icon--redeem" src="/assets/navbar_3.png"> Redeem <% end %>
+            <%= link_to leaderboards_path do %><img class="nav-dropdown__icon nav-dropdown__icon--leaders" src="/assets/navbar_6.png"> Leaders <% end %>
             <p class="js-nav-dropdown__name nav-dropdown__name"><i class="fa fa-caret-down"></i> <%= current_user.name %></p>
 
               <span class="nav-dropdown__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %> ">
@@ -78,6 +78,7 @@
               <li class="nav-dropdown__item"><%= link_to 'Games', games_path %></li>
               <li class="nav-dropdown__item"><%= link_to refer_path do %>Invite Friends <span class="nav-dropdown__credits">+25</span> <% end %></li>
               <li class="nav-dropdown__item"><a href="mailto:support@getluckee.com" target="_top">Contact Us</a></li>
+              <li class="nav-dropdown__item"><%= link_to 'Settings', edit_user_path(current_user) %></li>
               <li class="nav-dropdown__item nav-dropdown__signout"><%= link_to "Sign out", signout_path, method: "delete" %></li>
             </ul>
           </div>
