--- a/app/views/games/games_leaderboard.html.erb
+++ b/app/views/games/games_leaderboard.html.erb
@@ -1,27 +1,23 @@
-<% content_for :body_class, "leaderboard-index-page leaderboard-index-page--mobile" %>
+<% content_for :body_class, "interior-page leaderboard-landing" %>
 
-<div class='my-balance'>
-  <div class='redeem'>
-    <%= embedded_svg('svgs/leaderboard.svg', :class => 'leaderboard-svg') %>
-    <div class="redeem__copy">
-      <p class="redeemCredits">Leaderboards</p>
-      <p class="redeemCredits__desc">View the top contenders</p>
-    </div>
-  </p>
+<div class="interior-hero">
+    <h1 class="interior-hero__title">View the top contenders</h1>
+    <p class="interior-hero__desc" >Check out the leaderboards below to see who your competition is.</p>
+</div><!--/.interior-hero -->
 
-  </div>
-</div>
-<div class='inner-page__list'>
-  <p class="page-title">Games</p>
-  <ul>
-    <% @games.each do | g | %>
-      <%= link_to game_leaderboard_path(game_slug:g.slug) do %>
-      <li>
-        <%= g.name %>
-        <span class='cash-out__cost'>View Leaderboard</span>
-        <i class="fa fa-angle-right"></i>
-      </li>
-      <% end %>
-    <% end %>
-  </ul>
-</div>
+<div class="interior-body">
+    <section class="card-container">
+        <% @games.each do | g | %>
+            <div class="card-tout" style="background-image:url(/assets/<%= g.desktop_image %>);">
+                <div class="card-inner">
+                    <%= link_to game_leaderboard_path(game_slug:g.slug) do %>
+                        <h1 class="survey__title"><%= g.name %></h1>
+                        <!-- <span class='card__lower'>View Leaderboard</span> -->
+                    <% end %>
+                </div>
+            </div>
+        <% end %>
+    </section><!-- /.card-container -->
+</div><!--/.interior-body -->
+
+
