--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,9 @@
     <section class="navigation">
       <div class="nav-left">
         <%= link_to root_path do %><img class="nav-logo" src="/assets/small_luckee_font.png"><% end %>
+        <% if current_user %>
         <p class="nav-dropdown__user-credits" data-toggle="tooltip" data-placement="bottom" title="Credits Earned"><%= current_user.credits ||= 0 %></p>
+        <% end %>
       </div>
       <% if current_user %>
         <div class="nav-right">
