--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -10,5 +10,7 @@
     <% when "oscars-survey" %>
         <%= render 'survey_oscars' %>        
     <% when "travel-survey" %>
-        <%= render 'survey_four' %>               
-<% end %>
+        <%= render 'survey_four' %>  
+    <% else %>
+        <%= render 'survey_new'  %>          
+<% end %> 
