--- a/app/views/users/show_mobile.html.erb
+++ b/app/views/users/show_mobile.html.erb
@@ -1,5 +1,8 @@
 <% provide(:title, @user.name) %>
-<% content_for :body_class, "user-profile user-profile--desktop" %>
+<% content_for :body_class, "user-profile user-profile--mobile" %>
+
+    <%= link_to "Edit", edit_user_path(current_user), class: "btn--outline" %>
+
 
     <div class="profile-section profile__top">
         <div class="profile__avatar" style="<% if current_user.oath_image %> background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></div>
@@ -7,20 +10,20 @@
         <h1 class="profile__name"><%= @user.name %></h1>
     </div><!-- /.profile__top -->
 
-    <div class="profile-section profile__middle">
+    <div class="profile-section">
         <div class="profile__inline-tout">
             <div class="inline-tout__item">
-                <h1 class="inline-tout__title"><%= @user.credits ||= 0 %></h1>
+                <h1 class="js-inline-tout__title inline-tout__title"><%= @user.credits ||= 0 %></h1>
                 <h3 class="inline-tout__sub-title">Current Credits</h3>
             </div><!-- /.inline-tout__item -->
 
             <div class="inline-tout__item">
-                <h1 class="inline-tout__title"><%= @user.lifetime_credits ||= 0%></h1>
+                <h1 class="js-inline-tout__title inline-tout__title"><%= @user.lifetime_credits ||= 0%></h1>
                 <h3 class="inline-tout__sub-title">Lifetime Credits</h3>
             </div><!-- /.inline-tout__item -->
 
             <div class="inline-tout__item" data-toggle="tooltip" data-placement="bottom" title="Coming Soon!">
-                <h1 class="inline-tout__title">--</h1>
+                <h1 class="js-inline-tout__title inline-tout__title">--</h1>
                 <h3 class="inline-tout__sub-title">Luckee Rank <i class="fa fa-info-circle"></i></h3>
             </div><!-- /.inline-tout__item -->
         </div><!-- /.profile__inline-tout -->
@@ -63,7 +66,7 @@
                 color_arr = ['#48d3c3', '#fea962', '#00bcf8', '#ff2b67', '#c176f8', '#da65c1', '#c8f7c5'],
                 color = d3.scale.ordinal()
                             .range(color_arr),
-                width = screenWidth/4,
+                width = screenWidth/2,
                 height = width,
                 r = width/2,
                 legendRectSize = 18,
@@ -102,7 +105,7 @@
             var copy = canvas.append("text")
                         .text(totalGames)
                         .attr('class', 'js-games-number')
-                        .style('fill', "#000")
+                        .style('fill', "#fff")
                         .attr('font-size', "32px")
                         .attr("transform", function() {
                             return "translate(" + ((width / 2) - (this.getBBox().width/2)) + "," + ((height / 2) - 10) + ")"
@@ -111,7 +114,7 @@
 
             var copy = canvas.append("text")
                         .text("Total games played")
-                        .style('fill', "#000")
+                        .style('fill', "#fff")
                         .attr("transform",function() {
                             return "translate(" + ((width / 2) - (this.getBBox().width/2)) + "," + ((height / 2) + 20) + ")"
                         })
