--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,35 +1,3 @@
-$grayMediumLight: #eaeaea;
-$dark-font: #4A4A4A;
-$dark-blue: #10172B;
-$dark-teal: #4fd1b5;
-$purple: #6f5499;
-$purple-border: #c8ade0;
-$credits-red: #e74c3c;
-$red: #e74c3c;
-$red-light: #F08080;
-$orange: #F2BB7C;
-$orange-light: #FFD9AD;
-$orange-flat: #e67e22;
-$dark-orange: #edae65;
-$silver: #bdc3c7;
-$grayMediumLight: #eaeaea;
-$dark-seafoam: #03a679;
-$clay: #DB704E;
-$tan: #FDE2C7;
-$midnight-blue: #14112c;
-$midnight: #10162c;
-
-
-// Fonts
-$xs: 12px;
-$sm: 14px;
-$md: 16px;
-$lg: 18px;
-$xl: 22px;
-$xxl: 24px;
-$xxxl: 28px;
-
-
 // New Palette
 $lavender: #817bdf;
 $teal: #4fd2c2;
@@ -58,3 +26,34 @@ $icon-gray: #f4f4f4;
 $iphone5: 321px;
 $iphone6: 376px;
 $ipad: 768px;
+
+// Fonts
+$xs: 12px;
+$sm: 14px;
+$md: 16px;
+$lg: 18px;
+$xl: 22px;
+$xxl: 24px;
+$xxxl: 28px;
+
+
+$grayMediumLight: #eaeaea;
+$dark-font: #4A4A4A;
+$dark-blue: #10172B;
+$dark-teal: #4fd1b5;
+$purple: $lavender;
+$purple-border: #c8ade0;
+$credits-red: #e74c3c;
+$red: #e74c3c;
+$red-light: #F08080;
+$orange: #F2BB7C;
+$orange-light: #FFD9AD;
+$orange-flat: #e67e22;
+$dark-orange: #edae65;
+$silver: #bdc3c7;
+$grayMediumLight: #eaeaea;
+$dark-seafoam: #03a679;
+$clay: #DB704E;
+$tan: #FDE2C7;
+$midnight-blue: #14112c;
+$midnight: #10162c;
