removed 'x' on purchse page for desktop

--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -139,6 +139,9 @@
 }
 
 .purchase-page {
+    .back-to-home {
+        display: none;
+    }
     .purchase-page__wrap {
         max-width: 900px;
         margin: 5vh auto 0;
