--- a/app/assets/stylesheets/mixins.css.scss
+++ b/app/assets/stylesheets/mixins.css.scss
@@ -157,3 +157,21 @@
   50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
   100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
 }
+
+
+// Loading Animation
+
+@keyframes turn {
+    from {
+        transform: rotate(0deg);
+        background: white;
+    }
+    80% {
+        transform: rotate(360deg);
+        background:rgba(255,255,255,0.75);
+    }
+    100% {
+        transform: rotate(360deg);
+        background:white;
+    }
+}
