--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -134,7 +134,12 @@
     </head>
     <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color','gold-runner']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %>">
 
-    <div class="se-pre-con"></div>
+        <div class="se-pre-con">
+            <div class='circle circle--1'></div>
+            <div class='circle circle--2'></div>
+            <div class='circle circle--3'></div>
+            <div class='circle circle--4'></div>
+        </div>
 
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key %>"><%= value %></div>
