--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -8,7 +8,9 @@
     <% when "movie-survey" %>
         <%= render 'survey_movie' %>
     <% when "oscars-survey" %>
-        <%= render 'survey_oscars' %>        
+        <%= render 'survey_oscars' %>
     <% when "travel-survey" %>
-        <%= render 'survey_four' %>               
+        <%= render 'survey_four' %>
+    <% when "bellhops" %>
+        <%= render 'survey_sponsored' %>
 <% end %>
