--- a/app/assets/stylesheets/interior-update.css.scss
+++ b/app/assets/stylesheets/interior-update.css.scss
@@ -140,6 +140,25 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+.list-page__list-item--overlay {
+    .list-item__icon {
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(121, 122, 123, 0.7);
+            top: 0;
+            left: 0;
+            border-radius: 2px;
+        }
+    }
+    .list-item__icon-title {
+        z-index: 9;
+    }
+}
 .list-item__icon-title {
     margin: 0;
     color: $dark-gray;
@@ -174,4 +193,29 @@
 .list-item__wrapper {
     float: left;
     margin-left: 10px;
+}
+
+// Ad Affiliate
+.ad-wrapper {
+    padding: 0 7.5%;
+
+    &.hide {
+        display: none;
+    }
+}
+.affiliate {
+    text-align: center;
+}
+.affiliate__msg {
+    font-size: $lg;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.affiliate__name {
+    color: $black;
+    float: right;
+}
+.affiliate__logo {
+    height: 50px;
+    width: auto;
 }
