--- a/app/views/surveys/index_mobile.html.erb
+++ b/app/views/surveys/index_mobile.html.erb
@@ -1,22 +1,38 @@
-<div class='inner-page__list'>
-    <p class="page-title">Surveys</p>
-    <ul>
-        <% @surveys.each do |survey| %>
-            <li>
-               
-                <% if UserSurvey.where(survey_id: survey.id,user_id:current_user.id,complete:true).present? %>
-                    <%= survey.name %>
-                    <span class='cash-out__cost'>Survey Completed</span>
-                <% else %>
-                    <%= link_to  survey do %>
-                        <%= survey.name %>
-                        <span class='cash-out__cost'>+<%= survey.credits%></span>
+<% content_for :body_class, "list-page list-page--mobile" %>
+
+<div class='list-page__container'>
+    <section class="list-page__upper">
+        <img src="/assets/wave1.png" class="wave wave--1">
+        <img src="/assets/wave2.png" class="wave wave--2">
+        <img src="/assets/wave3.png" class="wave wave--3">
+        <div class="list-page__upper-bar"></div>
+        <p class="list-page__title">Surveys</p>
+        <%# embedded_svg('svgs/wave.svg', :class => 'wave') %>
+    </section><!-- /.list-page__upper -->
+
+    <section class="list-page__lower">
+        <ul class="list-page__list">
+            <% @surveys.each do |survey| %>
+                <li class="list-page__list-item <% if survey.slug == "bellhops" %>list-page__list-item--overlay<% end %> <% if UserSurvey.where(survey_id: survey.id,user_id:current_user.id,complete:true).present? %> completed <% end %>">
+                    <div class="list-item__icon" style="<% if survey.slug == "bellhops" %> background-image: url(/assets/bellhops.jpg); <% end %>"><h3 class="list-item__icon-title"><span class="title--mini">+</span><%= survey.credits%></h3></div>
+                    <% if UserSurvey.where(survey_id: survey.id,user_id:current_user.id,complete:true).present? %>
+                        <div class="list-item__wrapper">
+                            <p class="list-item__title"><%= survey.name %></p>
+                            <p class="list-item__sub-cap list-item__sub-cap--teal">Completed</p>
+                        </div>
+                        <i class="fa fa-check-circle-o"></i>
+                    <% else %>
+                        <%= link_to survey do %>
+                        <div class="list-item__wrapper">
+                            <p class="list-item__title"><%= survey.name %></p>
+                        </div>
                         <i class="fa fa-angle-right"></i>
+                        <% end %>
                     <% end %>
-                <% end %>
-            </li>
-        <% end %>
-    </ul>
+                </li>
+            <% end %>
+        </ul>
+    </section>
 </div>
 
 
