--- a/app/views/static_pages/bellhops_affiliate.html.erb
+++ b/app/views/static_pages/bellhops_affiliate.html.erb
@@ -1,12 +1,12 @@
 <% content_for :body_class, "affiliate-page" %>
 
 <div>
-    <h1>You earned +25 points!</h1>
-    <h2>Bellhops</h2>
-    <img src="/assets/bellhops.jpg">
-    <a href="https://getbellhops.com/about/careers">Apply now to get all three!</a>
+    <h1 class="affiliate-page__copy">You earned +25 points!</h1>
+    <img class="affiliate-page__logo" src="/assets/bellhops.jpg">
+    <img class="affiliate__logo" src="/assets/bellhops_logo.png">
+    <a class="affiliate-page__link affiliate-page__link--bh" href="https://getbellhops.com/about/careers">Apply now to get all three!</a>
 </div>
 
 <div>
-    <%= link_to "Return to games", root_path %>
+    <%= link_to "Return to games", root_path, class: "btn--homepage btn--homepage-purple" %>
 </div>
