--- a/app/assets/stylesheets/interior-update.css.scss
+++ b/app/assets/stylesheets/interior-update.css.scss
@@ -154,9 +154,11 @@
             left: 0;
             border-radius: 2px;
         }
-    }
-    .list-item__icon-title {
-        z-index: 9;
+
+        .list-item__icon-title {
+            z-index: 9;
+            color: $white;
+        }
     }
 }
 .list-item__icon-title {
@@ -193,29 +195,4 @@
 .list-item__wrapper {
     float: left;
     margin-left: 10px;
-}
-
-// Ad Affiliate
-.ad-wrapper {
-    padding: 0 7.5%;
-
-    &.hide {
-        display: none;
-    }
-}
-.affiliate {
-    text-align: center;
-}
-.affiliate__msg {
-    font-size: $lg;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-.affiliate__name {
-    color: $black;
-    float: right;
-}
-.affiliate__logo {
-    height: 50px;
-    width: auto;
 }
