--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -2,13 +2,24 @@
 @import "mixins";
 
 .survey-page {
-    padding: 30px 0;
+    &.survey-page--mobile {
+        padding: 30px 0;
+    }
+
     text-align: left;
 
     .intro-copy {
         font-size: $xxl;
         margin-bottom: 20px;
         line-height: $xxxl;
+    }
+
+    .ad-wrapper .intro-copy {
+        padding: 0;
+        font-size: $xl;
+        line-height: $xxl;
+        margin-top: 20px;
+        margin-bottom: 10px;
     }
     .survey__question {
         font-size: $md;
